# pulumi-pinecone-byoc

./: .gitignore  AWS_INFRASTRUCTURE.md  AWS_PRICING.md  PulumiPlugin.yaml  README.md  __main__.py  bootstrap.sh  get-pricing.py  pyproject.toml  requirements.txt
.github/workflows/: aws.yaml  azure.yaml  ci.yaml  create-release.yaml  create-release.yml  e2e.yaml  gcp.yaml  release.yml
azure-test-project/: Pulumi.azure-dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
config/: __init__.py  aws.py  azure.py  base.py  config.py  gcp.py
pulumi_pinecone_byoc/: __init__.py  api.py  cluster.py  dns.py  ecr_refresher.py  eks.py  k8s_addons.py  k8s_configmaps.py  k8s_secrets.py  nlb.py  pinetools.py  providers.py  pulumi_operator.py  rds.py  s3.py  uninstaller.py  vpc.py
pulumi_pinecone_byoc/aws/: __init__.py  cluster.py  dns.py  eks.py  k8s_addons.py  nlb.py  pulumi_operator.py  rds.py  s3.py  vpc.py
pulumi_pinecone_byoc/azure/: __init__.py  aks.py  cluster.py  database.py  dns.py  k8s_addons.py  naming.py  nlb.py  pulumi_operator.py  storage.py  vnet.py
pulumi_pinecone_byoc/common/: __init__.py  api.py  cred_refresher.py  k8s_configmaps.py  k8s_secrets.py  naming.py  pinetools.py  providers.py  registry.py  uninstaller.py
pulumi_pinecone_byoc/gcp/: __init__.py  alloydb.py  cluster.py  dns.py  gcs.py  gke.py  k8s_addons.py  nlb.py  pulumi_operator.py  vpc.py
redrum/: README.md  freshness.py  mk_vectors.py  query_vectors.py  redrum.sh  requirements.txt
redrum/querier/: Dockerfile  querier.py  requirements.txt
redrum/tracker/: Dockerfile  lambda_function.py  requirements.txt
redrum/writer/: Dockerfile  requirements.txt  writer.py
saitama/: Dockerfile  README.md  docker-compose.yml  requirements.txt  saitama.sh
saitama/app/: main.py
setup/: aws_wizard.py  gcp_wizard.py  wizard.py
tf/: .gitignore  Makefile  README.md
tf/examples/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tf/examples/azure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tf/examples/gcp/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tf/modules/aws/: account.tf  addons.tf  control_plane.tf  database.tf  dns.tf  eks.tf  k8s_common.tf  lifecycle.tf  locals.tf  network.tf  nlb.tf  outputs.tf  pulumi_operator.tf  storage.tf  variables.tf  versions.tf
tf/modules/azure/: aks.tf  control_plane.tf  database.tf  dns.tf  k8s_addons.tf  k8s_common.tf  lifecycle.tf  locals.tf  network.tf  nlb.tf  outputs.tf  pulumi_operator.tf  resource_providers.tf  storage.tf  storage_integration.tf  variables.tf  versions.tf
tf/modules/common/: kubernetes.tf  locals.tf  outputs.tf  variables.tf  versions.tf
tf/modules/gcp/: apis.tf  control_plane.tf  database.tf  dns.tf  gke.tf  k8s_addons.tf  k8s_common.tf  lifecycle.tf  locals.tf  network.tf  nlb.tf  outputs.tf  pulumi_operator.tf  storage.tf  variables.tf  versions.tf
tf/provider/pineconebyoc/: README.md  go.mod  main.go
tf/provider/pineconebyoc/pineconebyoc/: client.go  client_test.go  provider.go  resources_api.go  resources_waiters.go
tf/setup/: wizard.py
typings/pulumi/: output.pyi
