[project]
name = "pulumi-pinecone-byoc"
dynamic = ["version"]
description = "Pulumi components for Pinecone BYOC clusters"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
keywords = ["pulumi", "pinecone", "byoc", "kubernetes", "aws", "gcp", "infrastructure"]
dependencies = [
    "pulumi>=3.216.0,<4.0.0",
    "pulumi-kubernetes>=4.25.0,<5.0.0",
    "pulumi-random>=4.19.0,<5.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "requests>=2.32.0,<3.0.0",
    "kubernetes>=32.0.0,<33.0.0",
]

[project.optional-dependencies]
aws = [
    "pulumi-aws>=7.14.0,<8.0.0",
    "pulumi-eks>=4.2.0,<5.0.0",
    "boto3>=1.42.0,<2.0.0",
]

gcp = [
    "pulumi-gcp>=8.10.0,<9.0.0",
    "google-auth>=2.35.0,<3.0.0",
    "google-cloud-compute>=1.20.0,<2.0.0",
]

[project.urls]
Homepage = "https://www.pinecone.io"
Documentation = "https://docs.pinecone.io/guides/production/bring-your-own-cloud"
Repository = "https://github.com/pinecone-io/pulumi-pinecone-byoc"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pulumi_pinecone_byoc/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["pulumi_pinecone_byoc", "config"]

[tool.hatch.build.targets.sdist]
include = [
    "pulumi_pinecone_byoc/**/*.py",
    "config/**/*.py",
    "README.md",
    "LICENSE",
]
exclude = [
    "examples",
    "cronjobs",
    "**/__pycache__",
    "**/*.pyc",
]
